--- a/index.html
+++ b/index.html
@@ -13,17 +13,12 @@
   <script>
     window.$docsify = {
       name: '',
-      repo: ''
-    }
-  </script>
-  <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-  //开启导航栏
-  <script>
-    window.$docsify = {
+      repo: '',
+      // 开启导航栏
       loadNavbar: true
     }
   </script>
+  <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 </body>
 </html>
