--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
   <div id="app">加载中...</div>
   <script>
     window.$docsify = {
-      name: '',
-      repo: '',
-      // 开启导航栏
-      loadNavbar: true
+      name: "Menma's blog",
+      repo: "https://github.com/HiMenma/HiMenma.github.io.git",
+      maxLevel: 4, //最大支持渲染的标题层级
+      auto2top: true, //切换页面后是否自动跳转到页面顶部
+      loadNavbar: true, // 开启导航栏
+      loadSidebar: true,//显示侧边栏目录数
+      // subMaxLevel: 2
     }
   </script>
   <!-- Docsify v4 -->
